fix: hapus tulisan dibawah gambar

--- a/index.html
+++ b/index.html
@@ -464,24 +464,15 @@
     
     <div class="gallery-grid">
         <div class="gallery-item">
-            <img src="images/galeri-1.jpg" alt="Momen 1">
-            <div class="caption">
-                <h4>#</h4>
-            </div>
+            <img src="images/galeri-1.jpg" alt="">
         </div>
 
         <div class="gallery-item">
-            <img src="images/foto-studio.jpg" alt="Foto Studio">
-            <div class="caption">
-                <h4>Foto Studio</h4>
-            </div>
+            <img src="images/foto-studio.jpg" alt="">
         </div>
 
         <div class="gallery-item">
-            <img src="images/foto-2.jpg" alt="Momen 2">
-            <div class="caption">
-                <h4>#</h4>
-            </div>
+            <img src="images/foto-2.jpg" alt="">
         </div>
     </div>
 </section> 
