--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
 
     <header>
-        <div class="logo">BHISHMA.</div>
+        <div class="header-left"></div>
+            <div class="logo">BHISHMA.</div>
+            <div class="header-logos">
+                <img src="images/logo1.png" alt="Logo 1" class="mini-logo">
+                <img src="images/logo2.jpeg" alt="Logo 2" class="mini-logo">
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
