add: tambah nama

--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 <body>
 
     <header>
-        <div class="header-left"></div>
         <div class="logo">BHISHMA.</div>
-            <div class="header-logos">
-                <img src="images/logo-1.png" alt="Logo 1" class="mini-logo">
-                <img src="images/logo-2.jpeg" alt="Logo 2" class="mini-logo">
-            </div>
-        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -88,7 +82,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/alvina-img.png" alt="Ahlam Anwarul Munawaroh" class="member-photo">
+                    <img src="images/ahlam.png" alt="Ahlam Anwarul Munawaroh" class="member-photo">
                     <p class="member-name">Ahlam Anwarul Munawaroh</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -99,7 +93,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/amelia-img.png" alt="Amanda Rahmawati" class="member-photo">
+                    <img src="images/amanda.png" alt="Amanda Rahmawati" class="member-photo">
                     <p class="member-name">Amanda Rahmawati</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -110,7 +104,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Asti Siti Nur Aisah" class="member-photo">
+                    <img src="images/asti.png" alt="Asti Siti Nur Aisah" class="member-photo">
                     <p class="member-name">Asti Siti Nur Aisah</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -121,7 +115,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Aulia Luthfiana" class="member-photo">
+                    <img src="images/aulia.png" alt="Aulia Luthfiana" class="member-photo">
                     <p class="member-name">Aulia Luthfiana</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -132,7 +126,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Berliana Anggun Cahyani" class="member-photo">
+                    <img src="images/berliana.png" alt="Berliana Anggun Cahyani" class="member-photo">
                     <p class="member-name">Berliana Anggun Cahyani</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -143,7 +137,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Cindy Claudia" class="member-photo">
+                    <img src="images/cindy.png" alt="Cindy Claudia" class="member-photo">
                     <p class="member-name">Cindy Claudia</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -154,7 +148,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Dewi Guniar" class="member-photo">
+                    <img src="images/dewi.png" alt="Dewi Guniar" class="member-photo">
                     <p class="member-name">Dewi Guniar</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -165,7 +159,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Elni Nur Fitriani" class="member-photo">
+                    <img src="images/elni.png" alt="Elni Nur Fitriani" class="member-photo">
                     <p class="member-name">Elni Nur Fitriani</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -176,7 +170,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Evania Fitriani Putri" class="member-photo">
+                    <img src="images/evania.png" alt="Evania Fitriani Putri" class="member-photo">
                     <p class="member-name">Evania Fitriani Putri</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -187,7 +181,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Halma Nurjanah" class="member-photo">
+                    <img src="images/halma.png" alt="Halma Nurjanah" class="member-photo">
                     <p class="member-name">Halma Nurjanah</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -198,7 +192,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Iip Madani" class="member-photo">
+                    <img src="images/iip.png" alt="Iip Madani" class="member-photo">
                     <p class="member-name">Iip Madani</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -209,7 +203,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Intan Nuraeni" class="member-photo">
+                    <img src="images/intan.png" alt="Intan Nuraeni" class="member-photo">
                     <p class="member-name">Intan Nuraeni</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -220,7 +214,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Kamelia Rizkia Andiani" class="member-photo">
+                    <img src="images/kamelia.png" alt="Kamelia Rizkia Andiani" class="member-photo">
                     <p class="member-name">Kamelia Rizkia Andiani</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -231,7 +225,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Khoerunnisa" class="member-photo">
+                    <img src="images/khoerunnisa.png" alt="Khoerunnisa" class="member-photo">
                     <p class="member-name">Khoerunnisa</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
@@ -242,7 +236,7 @@
                     "#"
                 </div>
                 <div class="member-info">
-                    <img src="assets/andhika-img.png" alt="Liska Melina Putri" class="member-photo">
+                    <img src="images/liska.png" alt="Liska Melina Putri" class="member-photo">
                     <p class="member-name">liska Melina Putri</p>
                     <span class="member-role tag-gamer">ANGGOTA</span>
                 </div>
